// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders the link with default values and the svg is hidden with no a11y violations 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #4B3CFA;
}

.c0:hover {
  opacity: 0.88;
}

.c0:active {
  opacity: 0.72;
}

<a
  class="c0"
  href="http://duckduckgo.com"
>
  text
</a>
`;

exports[`<Link /> renders the link with target _blank with the svg visible 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #4B3CFA;
}

.c0:hover {
  opacity: 0.88;
}

.c0:active {
  opacity: 0.72;
}

.c1 {
  margin-left: 6px;
  top: 2px;
  position: relative;
}

<a
  class="c0"
  href="http://duckduckgo.com"
  target="_blank"
>
  text
  <svg
    class="c1"
    height="15"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      fill="#4B3CFA"
    >
      <path
        d="M2.6 4H0v11h11v-2.6H2.6z"
      />
      <path
        d="M4 0v11h11V0H4zm9.7 1.3v8.4L5.2 1.3h8.5z"
      />
    </g>
  </svg>
</a>
`;
